# VeriSpan-RGAT

./: .gitignore  Makefile  pyproject.toml  pytest.ini
scripts/: check_sources.py  preprocess_entities.py  setup_data.py  train.py
src/verispan/data/: __init__.py  collator.py  dataset.py  fever.py  schema.py  scifact.py  tokenization.py  wice.py
src/verispan/evaluation/: __init__.py  evaluator.py  metrics.py
src/verispan/model/: __init__.py  encoder.py  graph.py  rgat.py  span_head.py  verdict_head.py  verispan.py
src/verispan/processing/: __init__.py  collator.py  dataset.py  entity.py  tokenization.py
src/verispan/training/: __init__.py  optimiser.py  trainer.py
tests/: conftest.py  factories.py
tests/data/: test_fever.py  test_schema.py  test_scifact.py  test_wice.py
tests/evaluation/: test_metrics.py
tests/model/: test_verispan.py
tests/processing/: test_collator.py  test_dataset.py  test_entity.py  test_tokenization.py
