[tool.poetry]
name = "verispan-rgat"
version = "0.1.0"
description = "Span-Level Heterogeneous Graph Reasoning for General-Purpose Claim Verification"
authors = ["Sagnik Taraphdar <code.sagnik@gmail.com>"]
readme = "README.md"
packages = [{include = "claim_verifier", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
sentencepiece = "^0.2.1"
protobuf = "^7.34.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
black = "^26.3.1"
ruff = "^0.15.12"
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
